<resources>
    <string name="app_name">TripTracker_AnnaMoscoloni</string>
    <string name="addBtn_title">Add Trip</string>
    <string name="homeBtn_Title">Home</string>
    <string name="total_time_label">Duration (Hours)</string>
    <string name="start_odometer_label">Start Odometer</string>
    <string name="end_odometer_label">End Odometer</string>
    <string name="delete_context">Delete</string>
    <string name="edit_context">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_btn">Date</string>
    <string name="time_btn">Time</string>
    <string name="trip_type_label">Trip Type</string>
    <string name="submit_btn">Done</string>
    <string name="trip_id_add_fragment">tripId</string>
    <string name="datePickerFragment">datePicker</string>
    <string name="timePickerFragment">timePicker</string>
    <string name="personnal_trip">Personnal Trip</string>
    <string name="uber_trip">Uber Trip</string>
    <string name="filter_date_label">Filter by Date</string>
    <string name="datePickerFilter">datePickerFilter</string>
</resources>