<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTrip" >

    <Button
        android:id="@+id/date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/button"
        android:text="@string/date_btn"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/time_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/button"
        android:text="@string/time_btn"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_btn" />

    <EditText
        android:id="@+id/odometer_start_input"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/odometer_end_input"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/duration_input"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/trip_type_input"
        android:layout_width="256dp"
        android:layout_height="138dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_rectangle_general"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/personnal_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personnal_trip" />

        <RadioButton
            android:id="@+id/uber_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uber_trip" />
    </RadioGroup>

    <EditText
        android:id="@+id/date_output"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:gravity="center_vertical"
        android:inputType="date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/date_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_btn"
        app:layout_constraintVertical_bias="0.666"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/time_output"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:inputType="time"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/time_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/time_btn"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/start_odometer_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_btn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/end_odometer_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/total_time_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/trip_type_label"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration_input" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/submit_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_type_input" />

</androidx.constraintlayout.widget.ConstraintLayout>