<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/rounded_rectangle_uber">

    <TextView
        android:id="@+id/trip_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:text="Date"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_time_label"
        android:layout_width="61dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:text="@string/total_time_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/total_time"
        app:layout_constraintEnd_toStartOf="@+id/total_time"
        app:layout_constraintTop_toTopOf="@+id/total_time"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/trip_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:inputType="time"
        android:text="Start Time"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_odo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_weight="1"
        android:text="@string/start_odometer_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/start_odometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_odometer" />

    <TextView
        android:id="@+id/start_odometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:inputType="numberSigned"
        android:text="start odometer"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/start_odo_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/end_odo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/end_odometer_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/end_odometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/end_odometer" />

    <TextView
        android:id="@+id/end_odometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="56dp"
        android:inputType="numberSigned"
        android:text="end odometer"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/end_odo_label"
        app:layout_constraintTop_toBottomOf="@+id/start_odometer" />

    <TextView
        android:id="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:inputType="numberSigned"
        android:text="time"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>